[gd_scene load_steps=13 format=2]

[ext_resource path="res://SystemMap.gd" type="Script" id=1]
[ext_resource path="res://objects/planets/sprites/Mars.png" type="Texture" id=2]
[ext_resource path="res://objects/planets/sprites/Pluto.png" type="Texture" id=3]
[ext_resource path="res://objects/planets/sprites/Mercury.png" type="Texture" id=4]
[ext_resource path="res://objects/planets/sprites/Earth's Moon.png" type="Texture" id=5]
[ext_resource path="res://objects/planets/sprites/Venus.png" type="Texture" id=6]
[ext_resource path="res://objects/planets/Planet.gd" type="Script" id=7]
[ext_resource path="res://ui/UI_theme.tres" type="Theme" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="SphereMesh" id=2]
radial_segments = 24

[sub_resource type="Shader" id=3]
code = "shader_type spatial;


void fragment() {
	METALLIC = 0.0;
	ROUGHNESS = 0.85;
	ALBEDO = vec3(0.2, 0.2, 0.2);
	
	
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[node name="System Map" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00244224, 2.25312 )
fov = 75.0

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet_Thumbnail_Container" type="ColorRect" parent="UI"]
margin_left = 240.0
margin_top = 288.0
margin_right = 400.0
margin_bottom = 320.0
mouse_filter = 2
color = Color( 0.0196078, 0.439216, 0.717647, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highlight" type="ColorRect" parent="UI/Planet_Thumbnail_Container"]
margin_left = 66.0
margin_top = 2.0
margin_right = 94.0
margin_bottom = 30.0
color = Color( 0, 0.392157, 0.411765, 0.87451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Planet_Thumbnail_Container"]
margin_right = 160.0
margin_bottom = 32.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mercury_Area" type="Area2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer"]

[node name="Mercury_Sprite" type="Sprite" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Mercury_Area"]
position = Vector2( 16, 16 )
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Mercury_Area"]
position = Vector2( 16, 16 )
shape = SubResource( 1 )

[node name="Venus_Area" type="Area2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer"]

[node name="Venus_Sprite" type="Sprite" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Venus_Area"]
position = Vector2( 48, 16 )
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Venus_Area"]
position = Vector2( 48, 16 )
shape = SubResource( 1 )

[node name="Earth\'sMoon_Area" type="Area2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer"]

[node name="Earth\'sMoon_Sprite" type="Sprite" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Earth\'sMoon_Area"]
position = Vector2( 80, 16 )
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Earth\'sMoon_Area"]
position = Vector2( 80, 16 )
shape = SubResource( 1 )

[node name="Mars_Area" type="Area2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer"]

[node name="Mars_Sprite" type="Sprite" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Mars_Area"]
position = Vector2( 112, 16 )
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Mars_Area"]
position = Vector2( 112, 16 )
shape = SubResource( 1 )

[node name="Pluto_Area" type="Area2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer"]

[node name="Pluto_Sprite" type="Sprite" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Pluto_Area"]
position = Vector2( 144, 16 )
scale = Vector2( 0.1875, 0.1875 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Planet_Thumbnail_Container/HBoxContainer/Pluto_Area"]
position = Vector2( 144, 16 )
shape = SubResource( 1 )

[node name="PlanetName_Label" type="Label" parent="UI"]
margin_left = 232.0
margin_top = 336.0
margin_right = 410.0
margin_bottom = 350.0
text = "Earth's Moon"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return_Button" type="Button" parent="UI"]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 40.0
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet" type="Spatial" parent="."]
script = ExtResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="Planet"]
mesh = SubResource( 2 )
material/0 = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.84115 )
light_energy = 3.504

[connection signal="input_event" from="UI/Planet_Thumbnail_Container/HBoxContainer/Mercury_Area" to="." method="_on_Mercury_Area_input_event"]
[connection signal="input_event" from="UI/Planet_Thumbnail_Container/HBoxContainer/Venus_Area" to="." method="_on_Venus_Area_input_event"]
[connection signal="input_event" from="UI/Planet_Thumbnail_Container/HBoxContainer/Earth'sMoon_Area" to="." method="_on_EarthsMoon_Area_input_event"]
[connection signal="input_event" from="UI/Planet_Thumbnail_Container/HBoxContainer/Mars_Area" to="." method="_on_Mars_Area_input_event"]
[connection signal="input_event" from="UI/Planet_Thumbnail_Container/HBoxContainer/Pluto_Area" to="." method="_on_Pluto_Area_input_event"]
[connection signal="pressed" from="UI/Return_Button" to="." method="_on_Return_Button_pressed"]
